# ht-mcp

./: .gitignore  .gitmodules  ACHIEVEMENT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GIT_COMMIT_ISSUE_ANALYSIS.md  IMPLEMENTATION_STATUS.md  LICENSE  MERGE_CHECKLIST.md  MERGE_SUMMARY.md  MIGRATION_CHECKLIST.md  PROGRESS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_CLEAN.md  README.md  SECURITY.md  TODO.md  build-release.sh  commit_msg.txt  debug_mcp_client.py  fix_test.txt  install-and-run.sh  install-from-git.sh  install.sh  manual_test.sh  tag-release.sh  test-brew-manual.sh  test-homebrew-local.sh  test_complex_commit_fix.txt  test_complex_final.txt  test_ht_lib.rs  test_mcp.py  test_server_metadata.py  test_smart_fix.txt  test_terminal_functionality.py  update-ci.sh
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  consolidated-ci.yml  release.yml  release.yml.backup  test-ci.yml  update-homebrew.yml  windows-support-ci.yml
.memex/: rules.md
assets/: terminal.html
chocolatey/: ht-mcp.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
docs/: INSTALLATION.md  RELEASE_CHECKLIST.md  WINDOWS_INSTALLATION.md  complex-git-commit-fix.md  final-solution-analysis.md  smart-key-parsing-implementation.md  smart-key-parsing-proposal.md
examples/: mcp_client_usage.rs
homebrew/: ht-mcp.rb
scoop/: ht-mcp.json
scripts/: setup-homebrew-tap.sh  update-homebrew-formula.sh  update-package-manifests.sh
src/: error.rs  lib.rs  main.rs  main_rmcp.rs  web_server.rs
src/ht_integration/: command_bridge.rs  event_handler.rs  mod.rs  native_session_manager.rs  native_webserver.rs  session_manager.rs
src/mcp/: handlers.rs  mod.rs  server.rs  tools.rs  types.rs
src/transport/: mod.rs  stdio.rs
test-scoop/: README.md  create-test-bucket.sh  test-manifest.ps1  update-with-real-hash.sh
test_interactive/: emacs_test.txt  nano_test.txt  test.txt  vim_test.txt
test_interactive/test-app/: bun.lockb  package.json
tests/: README.md  integration_mcp_protocol.rs  integration_terminal_functionality.rs  server_metadata_test.rs  simple_mcp_test.rs  unit_response_formatting.rs
winget/: ht-mcp.yaml
