[workspace]
members = [".", "ht-core"]
resolver = "2"

[package]
name = "ht-mcp-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Pure Rust MCP server for headless terminal interactions"
repository = "https://github.com/your-org/ht-mcp-rust"

[dependencies]
# MCP SDK - using the official rust-sdk
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"

# Local HT library
ht = { path = "./ht-core" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

# [[bin]]
# name = "test_ht_lib"
# path = "test_ht_lib.rs"

[profile.release]
strip = true
